--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 git+https://github.com/davidbau/baukit
 accelerate
 dataclasses-json
+# TODO(evan): Needed?
+huggingface-hub
 invoke
 jupyter
 jupyter_http_over_ws
@@ -13,8 +15,6 @@ sentencepiece
 tqdm
 transformers
 torch
-huggingface-hub
-datasets
 
 # dev dependencies
 black
